--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "keywords": [
         "cryptonote",
-        "cryptonote-light"
+        "cryptonote-light",
+        "cryptonote-dark"
     ]
 }
